fix: fix scrollbar style

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,14 +5,14 @@
 
 // Scrollbar
 body {
-    ::-webkit-scrollbar {
+    &::-webkit-scrollbar {
         @apply w-2;
     }
-    ::-webkit-scrollbar-track {
+    &::-webkit-scrollbar-track {
         @apply bg-slate-600;
     }
-    ::-webkit-scrollbar-thumb {
-        @apply bg-red-500 border-[4px] border-slate-600;
+    &::-webkit-scrollbar-thumb {
+        @apply bg-red-500/90 border-[4px] border-slate-600;
     }
 }
 
